--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<title>Numeric View</title>
 		<meta name="author" content="Mark Swoope">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=News+Cycle|Share+Tech+Mono&display=swap">
 		<link rel="stylesheet" href="sanitize/sanitize.css">
 		<link rel="stylesheet" href="sanitize/typography.css">
 		<link rel="stylesheet" href="sanitize/forms.css">
@@ -15,7 +14,7 @@
 	<body>
 		<header>
 			<h1>Numeric view</h1>
-			<p>See the value representation of a numeric data type.</p>
+			<p>View binary representation of numeric values.</p>
 		</header>
 		<main>
 			<div id="format">
@@ -56,7 +55,7 @@
 			</div>
 			<div id="final-value-field-container">
 				<div id="final-value-field">
-					<label for="final-value">Final value: </label><input id="final-value">
+					<label for="final-value">Value: </label><input id="final-value">
 				</div>
 			</div>
 			<div id="bit-controls">
