--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			</div>
 			<div id="final-value-field-container">
 				<div id="final-value-field">
-					<label for="final-value">Value: </label><input id="final-value">
+					<label for="final-value">Value: </label><input id="final-value" type="text">
 				</div>
 			</div>
 			<div id="bit-controls">
