--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Numeric view</h1>
+			<h1>Numeric View</h1>
 			<p>View binary representation of numeric values.</p>
 		</header>
 		<main>
