--- a/index.html
+++ b/index.html
@@ -52,20 +52,6 @@
 				<input id="decrement" type="button" value="Decrement">
 			</div>
 			<div class="flex">
-				<!--
-				<div>
-					<label for="sign">Sign: </label>
-					<input id="sign" type="text" maxlength="1">
-				</div>
-				<div>
-					<label for="exponent">Exponent: </label>
-					<input id="exponent" type="text">
-				</div>
-				<div>
-					<label for="fraction">Fraction: </label>
-					<input id="fraction" type="text">
-				</div>
-				-->
 				<div>
 					<label for="value">Value: </label>
 					<input id="value" type="text">
@@ -73,7 +59,8 @@
 			</div>
 		</main>
 		<footer>
-			<p>Created by Mark Swoope (<a href="mailto:markswoope@outlook.com">markswoope@outlook.com</a>).</p>
+			<p>Created by Mark Swoope (<a href="mailto:markswoope@outlook.com">markswoope@outlook.com</a>).<br>
+			View on Github: <a href="https://github.com/Protovision/numeric-view/">https://github.com/Protovision/numeric-view/</a></p>
 		</footer>
 	</body>
 </html>
